--- a/server/package.json
+++ b/server/package.json
@@ -2,9 +2,9 @@
   "name": "sports-hub-backend",
   "version": "1.0.0",
   "description": "Backend API for Sports Club Management System",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "node index.js",
     "dev": "nodemon src/index.js"
   },
   "keywords": ["sports", "club", "management", "api", "express", "mysql"],
